syntax = "proto3";

import "google/protobuf/empty.proto";

package bed;

option java_multiple_files = true;
option java_package = "org.dominic.example.bed";
option java_outer_classname = "BedProto";

// The bed service definition.
service Bed {
    rpc Warm(google.protobuf.Empty) returns (stream BedStatus) {}
    rpc getStatus(google.protobuf.Empty) returns (BedStatus) {}
}

message BedStatus {
  int32 percentageHeated = 1;
}